--- a/WebDevelopment/frontend-development/Javascript/Stage04_Loops&Strings/02EvenDigit.html
+++ b/WebDevelopment/frontend-development/Javascript/Stage04_Loops&Strings/02EvenDigit.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Loops</title>
+  <title>Even Digit</title>
 </head>
 
 <body>
   
   
-  <script src="01main.js"></script>
+  <script src="02main.js"></script>
 
 </body>
 
