--- a/WebDevelopment/frontend-development/Javascript/Stage04_Loops&Strings/03OddDigit.html
+++ b/WebDevelopment/frontend-development/Javascript/Stage04_Loops&Strings/03OddDigit.html
@@ -4,14 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Loops</title>
+  <title>OddDigit</title>
 </head>
 
 <body>
   
-  
-  <script src="01main.js"></script>
-
+  <script src="03main.js"></script>
 </body>
 
 </html>
