--- a/WebDevelopment/frontend-development/Javascript/Stage04_Loops&Strings/05practice.html
+++ b/WebDevelopment/frontend-development/Javascript/Stage04_Loops&Strings/05practice.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Loops</title>
+  <title>Practice</title>
 </head>
 
 <body>
   
-  
-  <script src="01main.js"></script>
+  <script src="05main.js"></script>
 
 </body>
 
