--- a/WebDevelopment/frontend-development/HTML/Stage03_BasicHTMLTags/03problum2.html
+++ b/WebDevelopment/frontend-development/HTML/Stage03_BasicHTMLTags/03problum2.html
@@ -9,7 +9,7 @@
 
 <body>
   
-  <img src="" alt="img1">
+  <img href="https://www.pexels.com/photo/hot-air-balloon-2325447/">View Hot Air Balloon on Pexels" alt="img1">
   <img src="" alt="img2">
   <img src="" alt="img3">
   <img src="" alt="img4">
