--- a/WebDevelopment/frontend-development/TailWind_CSS/Stage01_Introduction/01Introduction.html
+++ b/WebDevelopment/frontend-development/TailWind_CSS/Stage01_Introduction/01Introduction.html
@@ -5,9 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
+  
+  <div class="font-sarif">
+    div
+  </div>
+  
+  <h1 class="text-3xl font-bold underline">
+    Hello world!
+  </h1>
 
 </body>
 
