--- a/WebDevelopment/frontend-development/Javascript/Stage07_DOM1/01DOM.html
+++ b/WebDevelopment/frontend-development/Javascript/Stage07_DOM1/01DOM.html
@@ -8,8 +8,14 @@
 </head>
 
 <body>
-  <div id="div">
-    
+  
+  <div class="container">
+    <div class="box1">
+      box1
+    </div>
+    <div class="box2">
+      box2
+    </div>
   </div>
   
   <script src="01main.js"></script>
