--- a/WebDevelopment/frontend-development/Javascript/Stage07_DOM1/01DOM.html
+++ b/WebDevelopment/frontend-development/Javascript/Stage07_DOM1/01DOM.html
@@ -14,7 +14,7 @@
       box1
     </div>
     <div class="box2">
-      box2
+    <h2>hello word</h2>
     </div>
   </div>
   
@@ -22,4 +22,4 @@
 
 </body>
 
-</html>jm
+</html>
