--- a/WebDevelopment/frontend-development/TailWind_CSS/Stage03_PaddingMargin&Borders/04simplePortfolio.html
+++ b/WebDevelopment/frontend-development/TailWind_CSS/Stage03_PaddingMargin&Borders/04simplePortfolio.html
@@ -10,14 +10,20 @@
 
 <body>
   <div>
-    <nav class="">
+    <nav class="mt-4 bg-gray-100">
       <a class="none px-4" href="#">Home</a>
-      <a href="#" class="px-4">Skills</a>
+      <a href="03Border.html" class="px-4">Skills</a>
      <a href="#" class="px-4">Education</a>
      <a href="#" class="px-4">About</a>
     </nav>
+    
+    <div>
+      <h3 class="mt-8 pl-4 border-b border-gray-200 font-bold">About Me </h3>
+      <p class="pl-4 ">Hello, I am Depepak Ghimire</p>
+    </div>
   </div>
 
 </body>
+
 
 </html>
