--- a/WebDevelopment/frontend-development/TailWind_CSS/Stage04_FlexBox/01FlexBox.html
+++ b/WebDevelopment/frontend-development/TailWind_CSS/Stage04_FlexBox/01FlexBox.html
@@ -4,17 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Simple Portfolio</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+  <title> Flex Box </title>
+      <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
-     <div>
-    <nav class="mt-4 bg-gray-100">
-      <a class="none px-4" href="#">Home</a>
-      <a href="03Border.html" class="px-4">Skills</a>
-     <a href="#" class="px-4">Education</a>
-     <a href="#" class="px-4">About</a>
+    <div>
+    <nav class="flex justify-around text-xl">
+      <a class="none" href="#">Home</a>
+      <a href="03Border.html" class="">Skills</a>
+     <a href="#" class="">Education</a>
+     <a href="#" class="">About</a>
     </nav>
     
     <div>
@@ -22,7 +22,8 @@
       <p class="pl-4 ">Hello, I am Depepak Ghimire</p>
     </div>
   </div>
-</body>
+  
 
+</body>
 
 </html>
