--- a/WebDevelopment/frontend-development/Javascript/Stage07_DOM/04Events_EventBubblingAndMore.md/06GuessTheNumberGame.html
+++ b/WebDevelopment/frontend-development/Javascript/Stage07_DOM/04Events_EventBubblingAndMore.md/06GuessTheNumberGame.html
@@ -79,6 +79,10 @@ bgColor.addEventListener("click",() =>{
   else{
     document.body.style.backgroundColor = "white";
     bgColor.textContent = "black";
+    bgColorr.textContent = "black";
+    attemptsDisplay.style.color = "black";
+    result.style.color = "black";
+    scoree.style.color = "black";
   }
   
 })
