--- a/WebDevelopment/frontend-development/Javascript/Js8DaysEventsPractice/Day02/feildSum.html
+++ b/WebDevelopment/frontend-development/Javascript/Js8DaysEventsPractice/Day02/feildSum.html
@@ -10,8 +10,8 @@
 <body>
   
   <div>
-    <input type="number" class="input1">
-    <input type="number" class="input2">
+    <input type="number" class="input1" placeholder="Enter 1st number">
+    <input type="number" class="input2" placeholder="Enter 2nd number">
     <button type="submit" class="add">+</button>
     <button type="submit" class="equal">=</button>
     <p class="result">Result : </p>
