--- a/WebDevelopment/frontend-development/Javascript/Stage07_DOM/Stage08_CallBacksAndPromises/01AsynchoronousNature/01try.html
+++ b/WebDevelopment/frontend-development/Javascript/Stage07_DOM/Stage08_CallBacksAndPromises/01AsynchoronousNature/01try.html
@@ -19,9 +19,14 @@
 
     setTimeout(() => {
         console.log(" i am inside an set timeout");
-    }, 2000)
+    }, 2000);
 
-    console.log("The End")
+    setTimeout(() => {
+        console.log(" i am inside settimeout 2")
+    })
+
+    console.log("The End");
+    
     </script>
    
     
